--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,8 @@
 # Supabase Environment Variables
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
+
+# Cloudflare Turnstile
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=your_site_key_here
+TURNSTILE_SECRET_KEY=your_secret_key_here
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
